--- a/style.css
+++ b/style.css
@@ -16,37 +16,89 @@ body
 
 #container{
 	margin: 1em;
+	width: fit-content;
 }
 
-#mainPanel,#secondPanel,#deletePanel{
+.panel{
 	color: black;
 	border: 1px solid black;
 	border-radius: 1em;
-	margin: 0.5em;
-	/*margin-bottom: 1.5em;*/
+	margin: 0.5em 0.25em 0 0.25em;
 	padding: 1em;
   	display: flex;
   	align-items: center;
-  	flex-direction: column;
-  	width: fit-content;
   	height: fit-content;
 }
 
-#secondPanel{
-	width: auto !important;
+#predictionPanel{
+	width: auto;
+	flex-direction: row;
+	justify-content: center;
+
+}
+
+#mainPanel{
+	width: auto;
 	height: auto !important;
+	margin-top: 0 !important;
+	padding-bottom: 0 !important;
+	padding-left: 0.5em !important;
+	padding-right: 0.5em !important;
+	flex-direction: column;
+}
+
+#secondPanel{
+	width: auto;
+	height: fit-content !important;
+	flex-direction: column;
+	/*margin-bottom: auto !important;*/
+	margin-bottom: 0;
+	align-self: bottom;
 }
 #deletePanel{
-	width: auto !important;
-	height: auto !important;
+	width: 100%;
+	box-sizing: border-box;
+	height: fit-content !important;
 	border-color: #FF7070 !important;/*light red*/
-	padding-top: 0.5em !important;
-	padding-bottom: 0.5em !important;
+	padding-top: 0.25em !important;
+	padding-bottom: 0.25em !important;
+	flex-direction: column;
+	align-self: bottom;
+	align-content: center;
+	margin-bottom: 0.5em !important;
+	/*margin-top: 4em !important;*/
+	border-radius: 0.5em !important;
+}
+
+#deletePointButton{
+	margin-right: auto;
+	margin-left: auto;
+}
+
+#twoMainPanels{
+	padding-top: 0.5em;
+	padding-bottom: 0;
+}
+
+#subBlock1{
+	display: flex;
+	flex-direction: row;
+	flex: 1 1 auto;
+	align-content: center;
+	justify-content: center;
+}
+
+#subBlock2{
+	display: flex;
+	flex-direction: column;
+	flex: 0 1 auto;
+	align-self: top;
+	margin-top: 0;
 }
 
 canvas{
-	margin: 0.5em;
-	padding: 0.5em;
+	margin: 0.5em 0.25em 0.5em 0.25em;
+	background-color: #FFFFFF;
 }
 
 button{
@@ -55,6 +107,11 @@ button{
 	background-color: #EEEEEE;/*light grey*/
 	border: 1px solid black;
 	border-radius: 0.25em;
+}
+
+.inlineBlockWrapper{
+	width: fit-content;
+	display: inline-block;
 }
 
 .enabledButton:hover{
@@ -77,6 +134,7 @@ button{
 	color: #ffffff;/*white text*/
 	outline: none !important;
 	box-shadow: 0 0 1em #719ECE !important;
+
 }
 
 .emptyField{
