--- a/style.css
+++ b/style.css
@@ -281,6 +281,14 @@ button{
 	padding: 0;
 }
 
+.cross{
+	flex: 0 1 auto !important;
+	margin-left: -0.5em !important;
+}
+.cross:hover{
+	background-color: #FF0000 !important;/*red*/
+}
+
 #plus{
 	flex: 0 1 auto;
 	margin-right: -0.5em !important;
@@ -291,8 +299,11 @@ button{
 	color: #ffffff !important;/*white text*/
 }
 
-#etabList a:hover{
+#etabList div a:hover, #plus a:hover{
 	background-color: #212cff !important;/*dark blue*/
+}
+
+#etabList a:hover{
 	color: #ffffff;/*white text*/
 }
 
